--- a/MCCTeam1JavaJive/build.gradle
+++ b/MCCTeam1JavaJive/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'maven'
 apply plugin: 'application'
 
-group = 'com.webage.mcc'
+group = 'com.bah.mcc'
 version = '0.0.1-SNAPSHOT'
 
 description = "Project-Data-API"
 
-mainClassName = "com.webage.App"
+mainClassName = "com.bah.mcc.day1"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
