--- a/MCCTeam1JavaJive/build.gradle
+++ b/MCCTeam1JavaJive/build.gradle
@@ -30,5 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   	runtimeOnly 'org.hsqldb:hsqldb'
+  	implementation 'org.json:json:20180813'
+  	
   
 }
