testing path to build gradle file

--- a/MCCTeam1JavaJive/Jenkinsfile
+++ b/MCCTeam1JavaJive/Jenkinsfile
@@ -5,6 +5,7 @@ node {
     
     stage ("Gradle Build - DataService") {
 	
+		sh 'pwd'
 		sh 'cd MCCTeam1JavaJive' // move into data service folder
         sh 'gradle clean build' // replace all bat into sh for linux systems
 
