--- a/MCCTeam1JavaJive/build.gradle
+++ b/MCCTeam1JavaJive/build.gradle
@@ -29,11 +29,12 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-  	runtimeOnly 'org.hsqldb:hsqldb'
+  	//runtimeOnly 'org.hsqldb:hsqldb'
 
   	implementation 'org.json:json:20180813'
   	// https://mvnrepository.com/artifact/com.auth0/java-jwt
 	implementation 'com.auth0:java-jwt:3.8.1'
 
-  
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'  
 }
