--- a/MCCTeam1JavaJive/Jenkinsfile
+++ b/MCCTeam1JavaJive/Jenkinsfile
@@ -14,16 +14,30 @@ node {
         sh 'cd MCCTeam1JavaJive/ && gradle bootjar'
     }
     
+    stage ("Containerize the app-docker build - DataApi") {
+        sh 'docker build --rm -t dataapi:v1.0 -f MCCTeam1JavaJive/Dockerfile .'
+    }
+    
+    stage ("Inspect the docker image - DataApi"){
+        sh "docker images dataapi:v1.0"
+        sh "docker inspect dataapi:v1.0"
+    }
+    
+    stage ("Run Docker container instance - DataApi"){
+        sh "docker run -d --rm --name dataapi -p 8080:8080 dataapi:v1.0"
+     }
+    
     stage('User Acceptance Test - DataService') {
 	
 	  def response= input message: 'Is this build good to go?',
-	   parameters: [choice(choices: 'Yes\nNo', description: '', name: 'Pass')]
+	   parameters: [choice(choices: 'Yes\nNo', 
+	   description: '', name: 'Pass')]
 	
 	  if(response=="Yes") {
 
 	    stage('Release- DataService') {
-	     sh 'cd MCCTeam1JavaJive/ && gradle build -x test'
-	     sh 'echo DataService is ready to release!'
+		 sh "docker stop dataapi"
+	     sh 'echo MCC DataService is ready to release!'
 
 	    }
 	  }
