--- a/MCCTeam1JavaJive/src/main/resources/application.properties
+++ b/MCCTeam1JavaJive/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.servlet.context-path=/api
 server.port=8080
 spring.jpa.hibernate.ddl-auto=none
 #debug=true
-spring.data.mongodb.database = mccdb
-spring.data.mongodb.host = localhost
-spring.data.mongodb.port = 27017
+#spring.data.mongodb.database = mccdb
+#spring.data.mongodb.host = localhost
+#spring.data.mongodb.port = 27017
